syntax = "proto3";

option go_package = "github.com/elap5e/go-mobileqq-api/pb";

message DeviceInfo {
  bytes bootloader = 10;
  bytes version = 18;
  bytes codename = 26;
  bytes incremental = 34;
  bytes fingerprint = 42;
  bytes boot_id = 50;
  bytes android_id = 58;
  bytes baseband = 66;
  bytes inner_version = 74;
}
